[metadata]
name = torch-types
version = 0.0.1
description = mypy compliant type annotations for torch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominiquegarmier/torch-types
author = Dominique F. Garmier
auther_email = dominique@garmier.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython


[options]
py_modules = torch_types
python_requires = >=3.8
install_requires =
    torch

[flake8]
max-line-length = 127

[tool:pytest]
python_files = tests/*.py tests/**/*.py tests.py test_*.py *_tests.py
